css/main.css
/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */

/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html {
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

/***** Text Style *****/

html {

}

body {
    font-famliy: "Open Sans", sans-serif;
}

ul, ol {

}

a {

}

h3, h4 {

}

p {

}

img {

}

figure {

}

address {

}

.content-wrapper {

}

h1, h3 {
    font-family: "Poppins", sans-serif;
}

/***** Sizing *****/

.content-wrapper {
    width: 90%;
    padding: 50px 0;
}

  /***** Header Style *****/

header, footer {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: column wrap;
    width: 100%;
}

header .content-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
    width: 100%;
    box-sizing: border-box;
    padding: 0;
}

header a {
    padding: 14px 0;
    text-align: center;
}

header img {
    width: 60%;
}

header .header-divider {
    background: gray;
    overflow: auto;
    width: 100%;
    height: 1px;
}

header nav {
    width: 45%;
}

header nav ul {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-flow: row nowrap;
    width: 100%;
    list-style-type: none;
    margin: 0px;
    padding: 17px 0px;
}

  /***** Main Style *****/

main {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: column nowrap;
}

    /***** Hero Style *****/

main .hero-area {
    display: flex;
    justify-contents: center;
    align-items: center;
    flex-flow: column wrap;
    background-image: url("../img/jake-melara-30679-unsplash.jpg");
    background-size: cover;
    background-position: top;
    height: 500px;
    width: 100%;
}

main .hero-area h1 {
    margin: 0;
}

    /***** Newsletter Signup Style *****/

.newsletter-signup {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.newsletter-signup .content-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: column wrap;
    padding: 30px 0;
}

.newsletter-signup h3, .newsletter-signup p {
    margin: 0px;
}

.newsletter-signup p {
    margin-bottom: 9%;
}

.form-description {
    display: flex;
    justify-content: center;
    flex-flow: column nowrap;
}

.form {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: column nowrap;
    width: 100%;
    margin: 2% 0 6% 0;
}

.form input {
    width: 100%;
    margin: 2.2% 0px;
    padding: 0;
    border: 0;
}

.form h3 {
    width: 100%;
}

    /***** Feature Style *****/

.features {
    display: flex;
    justify-content: center;
    align-items: center;
}

.features .content-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: column nowrap;
}

.features h1 {
    margin: 0 0 10px 0;
}

.features-items {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-flow: row wrap;
    width: 60%;
}

.features article {
    text-align: center;
    margin: 60px 0 0 0;
}

.features p {
    margin: 0;
}

    /***** Review Style *****/

.reviews {
    display: flex;
    justify-content: center;
    align-items: center;
}

.reviews .content-wrapper{
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-flow: row wrap;
}

.reviews h1 {
    margin: 0 0 30px 0;
}

.reviews img {
    width: 100%;
}

.reviews h3 {
    margin: 15px 0 0 0;
}
.reviews p {
    margin: 20px 0 0 0;
}

    /***** About Style *****/

      /***** Mission Style *****/

.mission {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

.mission .content-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
}

.mission h1 {
    margin: 0;
}

.mission p {
    margin: 10px 0 0 0;
}

      /***** Contact Style *****/

.contact-section {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
    width: 100%;
}

.contact-section p, .contact-section h1 {
    margin: 0;
}


    /***** Faq Style *****/

.faq {
    display: flex;
    justify-content: center;
    align-items: center;
}
/* ... */

